# rustqc

./: .gitignore  Cargo.toml  report-2.html  report-4.html  report.html  test-2_fastqc.html  test-3_fastqc.html  test-4_fastqc.html  test_fastqc.html
src/: cli.rs  html.rs  main.rs  reader.rs  report.rs
templates/: report.html.tera
